--- a/README
+++ b/README
@@ -1,1 +1,8 @@
-First repo file.
+Raft Consensus
+
+Overview
+The goal of this project is to implement two parts of the Raft consensus protocol. 
+
+In the first part of the project, we implement the leader-election protocol. In the second part, we implement the log-repair protocol.
+
+We used the Raft discussion paper as a guide for the project: https://users.cs.duke.edu/~chase/cps310/internal/papers/raft.pdf
